# TXGame

./: CMakeLists.txt  Reference.md  TXGameDev.code-workspace
SampleProject/: CMakeLists.txt
SampleProject/assets/shaders/: vertex.vert
SampleProject/config/: art.json  rules.json
SampleProject/src/: Project.hpp  main.cpp  utility_dump.hpp
dependency/: add_txlib.cmake
include/: txgame.hpp
include/impl/: animation.hpp  platformer.hpp
